--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,7 @@
 {
-  "name": "topefekt/module-magesms",
+  "name": "bulkgate/module-magesms",
   "description": "SMS notification & SMS marketing module for Magento. Free SMS module for Magento with advanced features and user friendly design.",
   "homepage": "http://www.mage-sms.com",
-  "require": {
-    "php": "~5.6.0|7.0.2|7.0.4|~7.1.0|~7.2.0"
-  },
   "type": "magento2-module",
   "version": "3.0.0",
   "license": [
@@ -24,6 +21,12 @@
       "role": "Developer"
     }
   ],
+  "repositories": {
+    "magento": {
+      "type": "composer",
+      "url": "https://repo.magento.com/"
+    }
+  },
   "autoload": {
     "files": [
       "registration.php"
